# evolutionary_computation

3SAT/: 3SAT.cabal  CHANGELOG.md  saida.txt
3SAT/app/: Main.hs
3SAT/app/modules/: Chromosome.hs  DataTypes.hs  Population.hs
3SAT/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
n_queens/: Documents.cabal  LICENSE
n_queens/app/: Main.hs
n_queens/app/modules/: Chromosome.hs  DataTypes.hs  Population.hs
n_queens/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
n_queens/dist-newstyle/packagedb/ghc-9.4.8/: package.cache
n_queens_plus/: Documents.cabal
n_queens_plus/app/: Main.hs
n_queens_plus/app/modules/: Chromosome.hs  DataTypes.hs  Population.hs
n_queens_plus/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
n_queens_plus/dist-newstyle/packagedb/ghc-9.4.8/: Documents-0.1.0.0-inplace.conf
radios_problem/: CHANGELOG.md
radios_problem/app/: Main.hs
radios_problem/app/modules/: Chromosome.hs  DataTypes.hs  Population.hs
radios_problem/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
