cabal-version:      3.0
name:               n-queens
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Wallace Mielniczki
maintainer:         wmielniczki15@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable n-queens
    import:           warnings
    main-is:          Main.hs
    other-modules:    Chromosome
                      DataTypes
                      Population
    build-depends:    base >=4.13,
                      random >= 1.2
    hs-source-dirs:   app
                      app/modules
    default-language: Haskell2010