cabal-version:      3.0
name:               n-queens
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Wallace Mielniczki
maintainer:         wmielniczki15@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common flags
    ghc-options: -Wall

executable n-queens
    import:           flags
    main-is:          Main.hs
    other-modules:    Chromosome
                      DataTypes
                      Population
    build-depends:    base ^>=4.13,
                      random >= 1.2,
                      containers >= 0.6.7
    hs-source-dirs:   app
                      app/modules
    default-language: Haskell2010